--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "framer-motion": "^12.18.1",
     "marked": "^15.0.12",
-    "next": "15.3.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "^14.1.0", 
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
     "yet-another-react-lightbox": "^3.23.2"
   },
   "devDependencies": {
