--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
-{
-  "name": "oneweb",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build && next export",   
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@tailwindcss/postcss": "^4",
-    "framer-motion": "^12.18.1",
-    "marked": "^15.0.12",
-    "next": "15.3.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "yet-another-react-lightbox": "^3.23.2"
-  },
-  "devDependencies": {
-    "@types/node": "24.0.1",
-    "@types/react": "19.1.8",
-    "tailwindcss": "^4",
-    "typescript": "5.8.3"
-  }
-}
+{  
+  "name": "oneweb",  
+  "version": "0.1.0",  
+  "private": true,  
+  "scripts": {  
+    "dev": "next dev --turbopack",  
+    "build": "next build",  
+    "start": "node .next/standalone/server.js",  
+    "lint": "next lint"  
+  },  
+  "dependencies": {  
+    "@tailwindcss/postcss": "^4",  
+    "framer-motion": "^12.18.1",  
+    "marked": "^15.0.12",  
+    "next": "^14.1.0",  
+    "react": "^18.2.0",  
+    "react-dom": "^18.2.0",  
+    "yet-another-react-lightbox": "^3.23.2"  
+  },  
+  "devDependencies": {  
+    "@types/node": "24.0.1",  
+    "@types/react": "19.1.8",  
+    "tailwindcss": "^4",  
+    "typescript": "5.8.3"  
+  }  
+}  
